2009-08-08  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-generic-email-compose):
	Define 'bts' variable. Detect Emacs BTS.
	(tinydebian-bts-mail-ctrl-command-reopen): New.
	(tinydebian-bug-nbr-insert-at-point): New user function.

2009-05-15  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylibb.el (kbd, functionp, frame-parameter): Remove.
	(buffer-live-p): Remove.
	(run-hook-with-args-until-success): Remove.
	(add-to-list): Remove.
	(byte-code-function-p): Remove.
	(compose-mail): Remove.
	(match-string): Remove.
	(replace-regexp-in-string): Remove.
	(buffer-substring-no-properties): Remove.
	(match-string-no-properties): Remove.
	(file-name-extension): Remove.
	(file-name-sans-extension): Remove.
	(executable-find): Remove.
	(custom): Remove.
	(eval-after-load): Remove.
	(make-local-hook): Remove.
	(abs): Remove.
	(split-sting): Remove.
	(delete-indentation): Remove.
	(with-output-to-string): Remove.
	(with-current-buffer): Remove.
	(save-current-buffer): Remove.

	* tiny/tinybookmark.el (ti::macrof-version-bug-report):
	Remove. Never used.
	(tinybookmark-:version-time): New.

2009-03-29  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyepkg.el: Improve documentation.

	* tiny/tinysearch.el (tinysearch-install-default-keybindings): Change
	C-M-s (reverse search) to non-window friendly M-r keybinding.x

2009-03-18  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-jump-to-definition): Add to
	F-RE `define-minor-mode'. Add failover if WORD was not found:
	use approximate search as last resort.

2009-03-13  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-generic-email-compose): Change
	call to `tinydebian-bts-email-compose'.

2009-03-07  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-with-gnus-article-buffer): change
	`progn' to `save-window-excursion'.
	(tinydebian-bts-generic-email-compose): Change call to
	`tinydebian-emacs-bts-email-compose'. Add parameter 'emacs'.